# parakeet.cpp

./: .dockerignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml
benchmarks/: BENCHMARK.md
benchmarks/results/: parakeet-ctc-0.6b.json  parakeet-ctc-1.1b.json  parakeet-rnnt-0.6b.json  parakeet-tdt-0.6b-v2.json  parakeet-tdt-1.1b.json  parakeet-tdt_ctc-110m.json  threads.json
benchmarks/results/decode_batch/cpu/: rnnt-0.6b.json  rnnt-1.1b.json  rt-eou-120m-v1.json  tdt-0.6b-v2.json  tdt-0.6b-v3.json  tdt-1.1b.json  tdt_ctc-1.1b.json  tdt_ctc-110m.json
benchmarks/results/decode_batch/gpu/: rnnt-0.6b.json  rnnt-1.1b.json  rt-eou-120m-v1.json  tdt-0.6b-v2.json  tdt-0.6b-v3.json  tdt-1.1b.json  tdt_ctc-1.1b.json  tdt_ctc-110m.json
benchmarks/results_gpu/: p1_nemo_ctc-0.6b.json  p1_nemo_ctc-1.1b.json  p1_nemo_realtime_eou_120m-v1.json  p1_nemo_rnnt-0.6b.json  p1_nemo_rnnt-1.1b.json  p1_nemo_tdt-0.6b-v2.json  p1_nemo_tdt-0.6b-v3.json  p1_nemo_tdt_ctc-110m.json  p1_ours_ctc-0.6b.json  p1_ours_ctc-1.1b.json  p1_ours_realtime_eou_120m-v1.json  p1_ours_rnnt-0.6b.json  p1_ours_rnnt-1.1b.json  p1_ours_tdt-0.6b-v2.json  p1_ours_tdt-0.6b-v3.json  p1_ours_tdt-1.1b.json  p1_ours_tdt_ctc-1.1b.json  p1_ours_tdt_ctc-110m.json  p2_nemo_ctc-0.6b.json  p2_nemo_realtime_eou_120m-v1.json  p2_nemo_rnnt-0.6b.json  p2_nemo_rnnt-1.1b.json  p2_nemo_tdt-0.6b-v2.json  p2_nemo_tdt-0.6b-v3.json  p2_nemo_tdt-1.1b.json  p2_nemo_tdt_ctc-1.1b.json  p2_nemo_tdt_ctc-110m.json  p2_ours_ctc-0.6b.json  p2_ours_ctc-1.1b.json  p2_ours_realtime_eou_120m-v1.json  p2_ours_rnnt-0.6b.json  p2_ours_rnnt-1.1b.json  p2_ours_tdt-0.6b-v2.json  p2_ours_tdt-0.6b-v3.json  p2_ours_tdt-1.1b.json  p2_ours_tdt_ctc-1.1b.json  p2_ours_tdt_ctc-110m.json  p3_nemo_ctc-0.6b.json  p3_nemo_ctc-1.1b.json  p3_nemo_realtime_eou_120m-v1.json  (+17 more)
docs/: parity.md
docs/superpowers/plans/: 2026-05-28-benchmark-nemo-vs-cpp.md  2026-05-28-feat-timestamps-confidence.md  2026-05-28-phase-1-encoder-ctc.md  2026-05-28-phase-2-transducer-core.md  2026-05-28-phase-3-tdt-greedy.md  2026-05-29-gpu-cuda-port.md
docs/superpowers/specs/: 2026-05-28-parakeet-cpp-design.md
examples/cli/: main.cpp
examples/server/: CMakeLists.txt  README.md  main.cpp  model_fetch.cpp  model_fetch.hpp  openai_format.cpp  openai_format.hpp
include/: parakeet_capi.h
scripts/: _nemo_bench_pass.py  benchmark.py  convert_parakeet_to_gguf.py  gen_benchmark_md.py  gen_nemo_baseline.py  gen_stream_reset_baseline.py  plot_benchmark.py  plot_gpu.py  validate_vs_nemo.py
src/: backend.cpp  conformer.cpp  conformer.hpp  ctc_decoder.cpp  decode_common.hpp  encoder.cpp  encoder.hpp  ggml_graph.cpp  joint.cpp  joint.hpp  mel.cpp  mel.hpp  model.cpp  model.hpp  model_loader.cpp  model_loader.hpp  parakeet.cpp  parakeet_capi.cpp  prediction.cpp  prediction.hpp  relpos_attention.cpp  relpos_attention.hpp  rnnt.cpp  rnnt.hpp  streaming.cpp  streaming.hpp  subsampling.cpp  subsampling.hpp  tdt.cpp  transducer_batch.cpp  transducer_batch.hpp
tests/: CMakeLists.txt  server_e2e.sh  test_backend_device.cpp  test_capi_batch.cpp  test_capi_batch_json.cpp  test_conformer_batch.cpp  test_encoder_batch.cpp  test_joint_step_batch.cpp  test_prediction_step_batch.cpp  test_relpos_attention_batch.cpp  test_server_format.cpp  test_server_resolve.cpp  test_streaming_eou_reset.cpp  test_subsampling_batch.cpp  test_subsampling_batch_causal.cpp  test_subsampling_tiling.cpp  test_transcribe_batch_ts.cpp  test_transcribe_tiled.cpp  test_transducer_greedy_batch.cpp  test_transducer_greedy_batch_rnnt.cpp
